# kis-python-2-course

./: .gitignore  .gitmodules  README.md  pyproject.toml
kis-homeworks/10Task/: 1sol.py
kis-homeworks/11Task/: README.md  main.py
kis-homeworks/11Task/other_sols/: sol2.py  sol3.py
kis-homeworks/12Task/: main.py
kis-homeworks/1Task/: Task.md  solution.py  solution2.py  solution3.py  solution4.py
kis-homeworks/2Task/: Task.md  solution.py  solution2.py  solution3.py
kis-homeworks/3Task/: 1sol.py  2sol.py  3sol.py
kis-homeworks/4Task/: 1sol.py
kis-homeworks/5Task/: 1sol.py
kis-homeworks/6Task/: 1sol.py  2sol.py
kis-homeworks/7Task/first_sol/: 1sol.py  2sol.py  3sol.py
kis-homeworks/7Task/fourth_sol/: 4sol.py
kis-homeworks/8Task/: 1sol.py
kis-homeworks/9Task/: 2sol.py
kis-homeworks/9Task/variant3/: sol.py
seminars/colloquium/: tasks.ipynb
seminars/prac2/: splitting_sentences.ipynb
seminars/prac4/: prac.ipynb
seminars/prac5/: main.ipynb
seminars/prac5/2_1/: test_2_1.py  testing_code.py
seminars/prac6/: main.ipynb
seminars/tasks/: README.md  task3.3.py  task3.5.py  task3.7.py
seminars/week3/: 4.2.cpp  4.2.py  a.txt  main.py
