[tool.poetry]
name = "kis-python-2-course"
version = "0.1.0"
description = ""
authors = ["benzlokzik <121052717+benzlokzik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
