[tool.poetry]
name = "kis-python-2-course"
version = "0.1.0"
description = ""
authors = ["benzlokzik <121052717+benzlokzik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = { version = "^24.2.0", extras = ["jupyter"] }
pycodestyle = "^2.11.1"
notebook = "^7.1.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
